<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical">

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:drawableLeft="@drawable/account_icon"
        android:hint="@string/username_input"
        android:singleLine="true"
        app:bootstrapBrand="info"
        app:bootstrapSize="md" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:drawableLeft="@drawable/password_icon"
        android:hint="@string/password_input"
        android:singleLine="true"
        app:bootstrapBrand="info"
        app:bootstrapSize="md" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_action_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/login_action"
            app:bootstrapBrand="success"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_action_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/register_action"
            app:bootstrapBrand="success"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />
    </LinearLayout>

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/tv_forgotten_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/forgotten_password"
        app:bootstrapBrand="secondary"
        app:fontAwesomeIcon="fa_android" />
</LinearLayout>
